# sdtp-extensions

./: LICENSE  README.md  extension_guide.md  pyproject.toml
sdtp_duckdb/: factory.py  schema.py  table.py
sdtp_sqlite/: factory.py  schema.py  table.py
